fix mobile spacing

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -277,6 +277,7 @@
       display: flex;
       gap: 20px;
       justify-content: center;
+      margin-right: 10px;
     }
   
     .navbar-links {
